syntax = "proto3";

package api.helloworld.v1;

import "google/api/annotations.proto";

option go_package = "ito-deposit/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service Home {
	rpc CreateHome (CreateHomeRequest) returns (CreateHomeReply){};

	rpc UpdateHome (UpdateHomeRequest) returns (UpdateHomeReply);

	rpc DeleteHome (DeleteHomeRequest) returns (DeleteHomeReply);

	rpc GetHome (GetHomeRequest) returns (GetHomeReply);



	rpc ListHome (ListHomeRequest) returns (ListHomeReply){
		option (google.api.http) = {
			get: "/home"
		};
	};


	rpc CreateLocal (CreateLocalRequest) returns (CreateLocalReply){
		option (google.api.http) = {
			get: "/home/local"
		};
	};


}

message CreateHomeRequest {}
message CreateHomeReply {}

message UpdateHomeRequest {}
message UpdateHomeReply {}

message DeleteHomeRequest {}
message DeleteHomeReply {}

message GetHomeRequest {}
message GetHomeReply {}

message ListHomeRequest {}
message ListHomeReply {}




message CreateLocalRequest {

}
message CreateLocalReply {

}



